# offline-ai-app

./: .gitignore  README.md  app.json  babel.config.js  build_apk.ps1  cortex-constitution.txt  package-lock.json  package.json  phase2.txt  pocketpal-techical-doc.md  prompt.md
app/: _layout.tsx  index.tsx  modal.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  explore.tsx  host.tsx  index.tsx  rewards.tsx  settings.tsx
components/: ChatHistoryModal.tsx  ChatSettingsModal.tsx  ClassSelectionModal.tsx  ToolSelector.tsx
native/OfflineLLMModule/: index.ts
native/OfflineLLMModule/android/: CMakeLists.txt  build.gradle
native/OfflineLLMModule/android/cpp/: bridge.cpp
native/OfflineLLMModule/android/src/main/java/expo/modules/offlinellmmodule/: OfflineLLMModule.kt
native/OfflineLLMModule/src/: OfflineLLMModule.ts  OfflineLLMModule.types.ts  OfflineLLMModuleView.tsx  OfflineLLMModuleView.web.tsx
scripts/: patch_gradle.js  restore_gradle.js
src/cortex/core/native/OfflineLLMModule/android/: CMakeLists.txt
src/cortex/core/native/OfflineLLMModule/android/cpp/: bridge.cpp
src/cortex/core/native/OfflineLLMModule/android/src/main/java/expo/modules/offlinellmmodule/: OfflineLLMModuleView.kt
src/cortex/core/store/: useUserStore.ts
src/cortex/core/utils/: ResponseCache.ts
src/cortex/education/: CortexInterpreter.ts
src/cortex/education/components/: ClassSelectionModal.tsx
src/cortex/education/config/: classRules.ts  safety.ts  tools.ts
src/cortex/education/store/: useUserStore.ts
src/cortex/runtime/: Constitution.ts  CortexRuntime.ts  PackManager.ts  Validation.ts
src/cortex/shared/components/: ChatHistoryModal.tsx  ChatSettingsModal.tsx  ToolSelector.tsx  themed-text.tsx  themed-view.tsx
src/cortex/shared/constants/: ToolDefinitions.ts  (+1 more)
store/: useChatStore.ts  useModelStore.ts  useUserStore.ts
utils/: PromptBuilder.ts
(+9 files in other folders)
